# poly-scribe

./: .bumpversion.toml  .clang-format  .clang-tidy  .cmake-format  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dev_req.txt  doc_req.txt  mkdocs.yml  versions.json
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml  doc-pub.yml  pr-cleanup.yml  pr-preview.yml
cmake/: ccache.cmake  clang-tidy.cmake  get_cpm.cmake  python_venv.cmake  system-link.cmake
code-gen/: README.md  generate_data_structures.cmake  pyproject.toml
code-gen/src/poly_scribe_code_gen/: __about__.py  __init__.py  __main__.py  _types.py  cpp_gen.py  matlab_gen.py  parse_idl.py  py_gen.py  types.py
code-gen/src/poly_scribe_code_gen/cli/: __init__.py
code-gen/src/poly_scribe_code_gen/templates/: header.jinja  matlab.jinja  matlab_enum.jinja  members.jinja  pyproject.jinja  python.jinja  reflect.jinja  serialize_func.jinja  template.hpp.jinja
code-gen/tests/: cpp_gen_test.py  parse_idl_test.py  py_gen_test.py  py_gen_works_test.py
dev/: 404.html  index.html  objects.inv
dev/additional/: index.html
dev/assets/: example.cpp  example.py
dev/quick_start/: index.html
dev/reference/: index.html
dev/reference/poly_scribe_code_gen/: index.html
dev/reference/poly_scribe_code_gen/_types/: index.html
dev/reference/poly_scribe_code_gen/cli/: index.html
dev/reference/poly_scribe_code_gen/cpp_gen/: index.html
dev/reference/poly_scribe_code_gen/parse_idl/: index.html
dev/reference/poly_scribe_code_gen/py_gen/: index.html
dev/search/: search_index.json
docs/: additional.md  index.md  quick_start.md
docs/assets/: additional.json  example.json  gen_example.bat
docs/reference/: index.md
external-patches/: reflect-cpp.patch
include/poly-scribe/: container-wrapper.hpp  factory.hpp  map-wrapper.hpp  pointer-wrapper.hpp  poly-scribe.hpp  scribe-wrapper.hpp
include/poly-scribe/detail/: helper.hpp  poly-bind.hpp  poly-wrapper.hpp  tags.hpp
pr-38/: 404.html  index.html
pr-38/assets/: plugin_data.hpp
pr-38/quick_start/: index.html
pr-38/reference/: index.html
pr-38/reference/poly_scribe_code_gen/: index.html
pr-38/reference/poly_scribe_code_gen/_types/: index.html
pr-38/reference/poly_scribe_code_gen/cli/: index.html
pr-38/reference/poly_scribe_code_gen/cpp_gen/: index.html
pr-38/reference/poly_scribe_code_gen/parse_idl/: index.html
pr-38/reference/poly_scribe_code_gen/py_gen/: index.html
pr-38/search/: search_index.json
pr-46/: 404.html  index.html
pr-46/assets/: example.cpp  plugin.webidl
pr-46/quick_start/: index.html
pr-46/reference/poly_scribe_code_gen/_types/: index.html
pr-46/reference/poly_scribe_code_gen/cli/: index.html
pr-46/reference/poly_scribe_code_gen/cpp_gen/: index.html
pr-46/reference/poly_scribe_code_gen/parse_idl/: index.html
pr-46/reference/poly_scribe_code_gen/py_gen/: index.html
pr-46/search/: search_index.json
pr-58/: index.html
pr-58/assets/: plugin_data.py  plugin_schema.json
pr-58/quick_start/: index.html
pr-58/reference/poly_scribe_code_gen/: index.html
pr-58/reference/poly_scribe_code_gen/cli/: index.html
pr-58/reference/poly_scribe_code_gen/cpp_gen/: index.html
pr-58/reference/poly_scribe_code_gen/parse_idl/: index.html
pr-58/search/: search_index.json
scripts/: advance_changelog.py
test/: CMakeLists.txt  container-wrapper.cpp  cpp_gen_compiles.cpp  integration.cpp  integration.webidl  integrationTest.m  integration_test.py  lang_integration.cpp  map-wrapper.cpp  pointer-wrapper.cpp  poly_scribe_test.cpp  schema_test.py  scribe-wrapper.cpp  tags.cpp  test-helper.hpp  test_gen_data.cmake  test_requirements.txt  utils.py
v1.0.0/: 404.html
v1.0.0/additional/: index.html
v1.0.0/assets/: additional.json  example.cpp  example.json  example.py  gen_example.bat  plugin.webidl  plugin_data.hpp  plugin_data.py  plugin_schema.json
v1.0.0/reference/: index.html
v1.0.0/reference/poly_scribe_code_gen/_types/: index.html
v1.0.0/reference/poly_scribe_code_gen/py_gen/: index.html
