[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poly-scribe-code-gen"
dynamic = ["version"]
description = 'Code generation for the poly-scribe library'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Pascal Palenda", email = "pascal.palenda@akustik.rwth-aachen.de" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pywebidl2",
  "jinja2",
  "black",
  "isort",
  "annotated_types",
  "pydantic",
]

[project.urls]
Documentation = "https://github.com/pingelit/poly-scribe#readme"
Issues = "https://github.com/pingelit/poly-scribe/issues"
Source = "https://github.com/pingelit/poly-scribe"

[project.scripts]
poly-scribe-code-gen = "poly_scribe_code_gen.cli:poly_scribe_code_gen"

[tool.hatch.version]
path = "src/poly_scribe_code_gen/__about__.py"

[tool.hatch.envs.default]
path = ".hatch"
dependencies = [
    "pytest",
    "pytest-mock"
]

[tool.hatch.envs.default.scripts]
code-gen = "py src/poly_scribe_code_gen/__main__.py {args}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/poly_scribe_code_gen}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["poly_scribe_code_gen"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
